# 42seoul_cursus

./: .gitignore  .gitmodules  README.md
Inception/: Makefile
Practice/: parsing.c  parsing.h
cpp_module/: README.md
cub3d/: Makefile  README.md  cub3d  cub3d.h  draw_camera.c  event.c  init_info.c  key_macos.h  load_texture.c  main.c  map.cub  raycasting.c  set_camera.c
exam/: mini_serv.c
exam_rank_04/: answer.c  microshell  microshell.c  out.res
ft_irc/: Channel.cpp  Channel.hpp  Cycle.cpp  Makefile  README.md  Server.cpp  Server.hpp  ServerCmd.cpp  Utils.cpp  ircserv  main.cpp
ft_irc/code/: 127.0.0.1_8888_log.txt  CMakeLists.txt  Makefile  ircserver
ft_irc/code/includes/: Channel.hpp  ClientIrc.hpp  Color.hpp  IrcServer.hpp  IrcServerProtocol.hpp  ServerApi.hpp  ServerEpoll.hpp  ServerKqueue.hpp  ServerPoll.hpp  ServerSelect.hpp  utility.hpp
ft_irc/code/srcs/: Channel.cpp  IrcServer.cpp  IrcServerCommands.cpp  MainServerApi.cpp  ServerApi.cpp  ServerEpoll.cpp  ServerKqueue.cpp  ServerPoll.cpp  ServerSelect.cpp  utility.cpp
ft_printf/: Makefile  README.md  ft_printf.c  ft_printf.h  ft_printf_hex.c  ft_printf_ptr.c  ft_printf_util.c  ft_putnbr.c
get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  get_next_ling_bonus.h
inception/: Makefile
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  (+33 more)
(+720 files in other folders)
